# Diary

./: .database  Cargo.toml  README.md  database.json  index.html  template.html
src/: db_ops.rs  input.rs  main.rs  popup.rs  ui.rs
