[package]
name = "diary"
version = "0.1.0"
authors = ["actuday6418 <actuday6418@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "A TUI based diary tool for Linux with encryption supported for files and text."
readme = "README.md"
repository = "https://github.com/actuday6418/Diary"
keywords = ["diary","journal","encrypted"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
chrono = "*"
magic-crypt = "*"
tui="0.14.0"
termion="1.5"
uuid={ version = "0.8", features = [ "v4" ] }
bincode="*"
clap = "*"
